clusters/homelab/apps/birds/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: birds
  labels:
    gateway.infra.services/allow-routes: "true"
