clusters/homelab/apps/birds/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flappy-race
  namespace: birds
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flappy-race
    app.kubernetes.io/instance: birds
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
